--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.2.3",
     "esbuild-wasm": "0.8.27",
     "localforage": "^1.10.0",
+    "monaco-editor": "^0.34.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
