--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^12.6.0",
     "@types/jest": "^26.0.19",
     "@types/node": "^12.19.11",
+    "@types/prettier": "^2.7.2",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "axios": "^1.2.3",
     "esbuild-wasm": "0.8.27",
     "localforage": "^1.10.0",
     "monaco-editor": "^0.34.1",
+    "prettier": "^2.8.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
