--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "axios": "^1.2.3",
+    "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
     "localforage": "^1.10.0",
     "monaco-editor": "^0.34.1",
