--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/react-resizable": "1.7.2",
+    "@uiw/react-md-editor": "2.1.1",
     "axios": "^1.2.3",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
